--- a/src/component/Main/Main.module.scss
+++ b/src/component/Main/Main.module.scss
@@ -2,4 +2,10 @@
 	display: flex;
 	flex-wrap: wrap;
 	margin: -15px;
+	justify-content:space-between;
+	.myloader{
+		margin: 15px;
+		flex: 1 0 20%;
+	}
+	
 }
