--- a/src/component/ui/Button/Button.module.scss
+++ b/src/component/ui/Button/Button.module.scss
@@ -17,6 +17,10 @@
 			border-left: 1px solid rgba(255, 255, 255, 0.25);
 		}
 	}
+	&:hover{
+			box-shadow: 0px 0px 3px 3px #f0ad90c3;
+			transition: all 0.5s;
+	}
 }
 .cardBtn{
 	cursor: pointer;
