--- a/src/component/Cart/Empty/Empty.module.scss
+++ b/src/component/Cart/Empty/Empty.module.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-top: 200px;
 	.title{
 		font-weight: 700;
 		font-size: 32px;
