--- a/src/component/ui/Orderpopup/Orderpopup.module.scss
+++ b/src/component/ui/Orderpopup/Orderpopup.module.scss
@@ -1,5 +1,5 @@
 .orderpopup{
-	position: absolute;
+	position: fixed;
 	bottom: 10px;
 	right: 10px;
 	padding: 10px;
@@ -10,6 +10,7 @@
 	letter-spacing: 0.01em;
 	color: #FFFFFF;
 	border-radius: 10px;
+	z-index: 100;
 }
 .cart{
 	position: absolute;
